# regata-software

./: .gitignore  README.md  deploy.sh  pyproject.toml  setup-pi-git.sh
aquarela/: config.py  main.py
aquarela-android/: build.gradle.kts  settings.gradle.kts
aquarela-android/app/: build.gradle.kts
aquarela/api/: course_setup.py  line.py  maneuvers.py  marks.py  polar.py  race.py  sails.py  sessions.py  sim.py  trim.py
aquarela/logging/: csv_logger.py  db.py
aquarela/nmea/: can_writer.py  pgn_decoder.py  source_base.py  source_can.py  source_interactive.py  source_simulator.py
aquarela/performance/: auto_calibrator.py  laylines.py  polar.py  polar_learner.py  polar_manager.py  targets.py  vmc.py
docs/: runbook.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: garmin_probe.py  test_can.py  vcan_test.py
tests/: conftest.py  test_api_routes.py  test_auto_polar_activate.py  test_calibration.py  test_can_writer.py  test_config.py  test_course_generator.py  test_csv_logger.py  test_damping.py  test_derived.py  test_laylines.py  test_maneuver_persistence.py  test_maneuvers.py  test_marks.py  test_navigation.py  test_ota_sync.py  test_pgn_decoder.py  test_pipeline_integration.py  test_polar.py  test_polar_edge_cases.py  test_polar_learner.py  test_polar_manager.py  test_polar_rehydrate.py  test_sessions.py  test_sight_triangulator.py  test_simulator.py  test_start_line.py  test_targets.py  test_timer.py  test_trim_book.py  test_true_wind.py  test_upwash_learning.py  test_upwash_table.py  test_vmc.py  test_wind_correction.py
(+129 files in other folders)
